--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "hapi": "^16.5.2",
     "inert": "^4.2.1",
     "path": "^0.12.7",
